# hython

./: .gitignore  README-Copy1.md  README.md  environmnet.yml  pyproject.toml  setup.py  workflow_time_series_predictions.ipynb  workflow_time_series_predictions2.ipynb
config/: surr_predict.yaml  surr_preprocess.yaml  surr_training.yaml  training.yaml
config/alpine_region/: evaluating.yaml  preprocessing.yaml  training.yaml
config/demo/: evaluating.yaml  preprocessing.yaml  training.yaml
data/: staticmaps_calibrated_parameters.nc
demo/: demo.ipynb  demo_2.ipynb  demo_v1.ipynb  demo_v2.ipynb  evaluate.ipynb  inference.ipynb  overview.ipynb  preprocess.ipynb  training.ipynb  training_convlstm.ipynb  training_lstm.ipynb  viz_inputs.ipynb
demo/alpine_region/: evaluate.ipynb  inference.ipynb  preprocess.ipynb  training.ipynb
hython/: .gitattributes  config.py  evaluator.py  losses.py  metrics.py  normalizer.py  preprocess.py  preprocessor.py  sampler.py  setup.py  train.py  train_val.py  trainer.py  utils.py  viz.py
hython/cli/: evaluate.py  predict.py  preprocess.py  train.py
hython/itwinai/: data.py  (+1 more)
itwinai/: dataloader.py  itwin_train.py  pipeline.yaml  predictor.py  trainer.py
nb/: convlstm.ipynb  demo_2.ipynb  dev_metrics.ipynb  dev_sampler.ipynb  dev_sampler_v2.ipynb  dev_training.ipynb  dev_training_multi_target.ipynb  evaluate.ipynb  evaluate_metrics.ipynb  giuh.ipynb  param_learning.ipynb  train_convlstm.ipynb  training.ipynb  training_lstm.ipynb  viz.ipynb  workflow_time_series_forcasting_still_under_development.ipynb
tests/: test_normalizer.py
(+25 files in other folders)
